fix dashboard align

--- a/ztc_added.css
+++ b/ztc_added.css
@@ -103,3 +103,7 @@
   opacity: 0.8;
   display: inline-block;
 }
+/* 
+.radiobtn {
+  width: 360px !important;
+} */
